finalized notebook with scraping complete!!! yay

--- a/notebooks/scraping-descriptions.ipynb
+++ b/notebooks/scraping-descriptions.ipynb
@@ -68,20 +68,26 @@
     "df_newcastle = pd.read_csv('../data-housing/newcastle-may-7.csv')\n",
     "df_bellevue = pd.read_csv('../data-housing/bellevue-may-7.csv')\n",
     "df_kirkland = pd.read_csv('../data-housing/kirkland-may-7.csv')\n",
-    "df_redmond = pd.read_csv('../data-housing/redmond-may-7.csv')"
+    "df_redmond = pd.read_csv('../data-housing/redmond-may-7.csv')\n",
+    "df_mt = pd.read_csv('../data-housing/mountlake-terrace-may-7.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_dfs = [df_everett, df_lynn, df_edm, \n",
-    "               df_muk, df_mc, df_bothell, \n",
-    "               df_kenmore, df_nsea,\n",
-    "               df_csea, df_shoreline, df_ssea, \n",
-    "               df_wsea, df_renton, df_newcastle, \n",
+    "finished_dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_dfs = [df_wsea, df_renton, df_newcastle, \n",
     "               df_bellevue, df_kirkland, df_redmond]"
    ]
   },
@@ -143,172 +149,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SALE TYPE</th>\n",
+       "      <th>SOLD DATE</th>\n",
+       "      <th>PROPERTY TYPE</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>PRICE</th>\n",
+       "      <th>BEDS</th>\n",
+       "      <th>BATHS</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>SQUARE FEET</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HOA/MONTH</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>NEXT OPEN HOUSE START TIME</th>\n",
+       "      <th>NEXT OPEN HOUSE END TIME</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>MLS#</th>\n",
+       "      <th>FAVORITE</th>\n",
+       "      <th>INTERESTED</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>DESC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [SALE TYPE, SOLD DATE, PROPERTY TYPE, ADDRESS, CITY, STATE, ZIP, PRICE, BEDS, BATHS, LOCATION, SQUARE FEET, LOT SIZE, YEAR BUILT, DAYS ON MARKET, $/SQUARE FEET, HOA/MONTH, STATUS, NEXT OPEN HOUSE START TIME, NEXT OPEN HOUSE END TIME, URL, SOURCE, MLS#, FAVORITE, INTERESTED, LATITUDE, LONGITUDE, DESC]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for idx, df in enumerate(list_of_dfs):\n",
-    "    list_of_dfs[idx] = list_of_dfs[idx].rename(columns={'URL (SEE http://www.redfin.com/buy-a-home/comparative-market-analysis FOR INFO ON PRICING)': \n",
-    "                            'URL'})"
+    "list_of_dfs[5][list_of_dfs[5]['DESC'] == 'Invalid URL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n",
-      "140\n",
-      "150\n",
-      "160\n",
-      "170\n",
-      "180\n",
-      "190\n",
-      "200\n",
-      "210\n",
-      "220\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "0\n",
-      "10\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n",
-      "140\n",
-      "150\n",
-      "160\n",
-      "170\n",
-      "180\n",
-      "190\n",
-      "200\n",
-      "210\n",
-      "220\n",
-      "230\n",
-      "240\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n",
-      "140\n",
-      "150\n",
-      "160\n",
-      "170\n",
-      "180\n",
-      "190\n",
-      "200\n",
-      "210\n",
-      "220\n",
-      "230\n",
-      "240\n",
-      "250\n",
-      "260\n",
-      "270\n",
-      "280\n",
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n",
-      "140\n",
-      "150\n",
-      "160\n",
-      "170\n",
-      "180\n",
-      "190\n",
-      "200\n",
-      "210\n",
-      "220\n",
-      "230\n",
-      "240\n",
-      "250\n",
-      "260\n",
-      "270\n",
-      "280\n",
-      "290\n",
-      "300\n"
+      "0/6 df 0/266\n",
+      "0/6 df 10/266\n",
+      "0/6 df 20/266\n",
+      "0/6 df 30/266\n",
+      "0/6 df 40/266\n",
+      "0/6 df 50/266\n",
+      "0/6 df 60/266\n",
+      "0/6 df 70/266\n",
+      "0/6 df 80/266\n",
+      "0/6 df 90/266\n",
+      "0/6 df 100/266\n",
+      "0/6 df 110/266\n",
+      "0/6 df 120/266\n",
+      "0/6 df 130/266\n",
+      "0/6 df 140/266\n",
+      "0/6 df 150/266\n",
+      "0/6 df 160/266\n",
+      "0/6 df 170/266\n",
+      "0/6 df 180/266\n",
+      "0/6 df 190/266\n",
+      "0/6 df 200/266\n",
+      "0/6 df 210/266\n",
+      "0/6 df 220/266\n",
+      "0/6 df 230/266\n",
+      "0/6 df 240/266\n",
+      "0/6 df 250/266\n",
+      "0/6 df 260/266\n",
+      "1/6 df 0/303\n",
+      "1/6 df 10/303\n",
+      "1/6 df 20/303\n",
+      "1/6 df 30/303\n",
+      "1/6 df 40/303\n",
+      "1/6 df 50/303\n",
+      "1/6 df 60/303\n",
+      "1/6 df 70/303\n",
+      "1/6 df 80/303\n",
+      "1/6 df 90/303\n",
+      "1/6 df 100/303\n",
+      "1/6 df 110/303\n",
+      "1/6 df 120/303\n",
+      "1/6 df 130/303\n",
+      "1/6 df 140/303\n",
+      "1/6 df 150/303\n",
+      "1/6 df 160/303\n",
+      "1/6 df 170/303\n",
+      "1/6 df 180/303\n",
+      "1/6 df 190/303\n",
+      "1/6 df 200/303\n",
+      "1/6 df 210/303\n",
+      "1/6 df 220/303\n",
+      "1/6 df 230/303\n",
+      "1/6 df 240/303\n",
+      "1/6 df 250/303\n",
+      "1/6 df 260/303\n",
+      "1/6 df 270/303\n",
+      "1/6 df 280/303\n",
+      "1/6 df 290/303\n",
+      "1/6 df 300/303\n",
+      "2/6 df 0/21\n",
+      "2/6 df 10/21\n",
+      "2/6 df 20/21\n",
+      "3/6 df 0/245\n",
+      "3/6 df 10/245\n",
+      "3/6 df 20/245\n",
+      "3/6 df 30/245\n",
+      "3/6 df 40/245\n",
+      "3/6 df 50/245\n",
+      "3/6 df 60/245\n",
+      "3/6 df 70/245\n",
+      "3/6 df 80/245\n",
+      "3/6 df 90/245\n",
+      "3/6 df 100/245\n",
+      "3/6 df 110/245\n",
+      "3/6 df 120/245\n",
+      "3/6 df 130/245\n",
+      "3/6 df 140/245\n",
+      "3/6 df 150/245\n",
+      "3/6 df 160/245\n",
+      "3/6 df 170/245\n",
+      "3/6 df 180/245\n",
+      "3/6 df 190/245\n",
+      "3/6 df 200/245\n",
+      "3/6 df 210/245\n",
+      "3/6 df 220/245\n",
+      "3/6 df 230/245\n",
+      "3/6 df 240/245\n",
+      "4/6 df 0/168\n",
+      "4/6 df 10/168\n",
+      "4/6 df 20/168\n",
+      "4/6 df 30/168\n",
+      "4/6 df 40/168\n",
+      "4/6 df 50/168\n",
+      "4/6 df 60/168\n",
+      "4/6 df 70/168\n",
+      "4/6 df 80/168\n",
+      "4/6 df 90/168\n",
+      "4/6 df 100/168\n",
+      "4/6 df 110/168\n",
+      "4/6 df 120/168\n",
+      "4/6 df 130/168\n",
+      "4/6 df 140/168\n",
+      "4/6 df 150/168\n",
+      "4/6 df 160/168\n",
+      "5/6 df 0/119\n",
+      "5/6 df 10/119\n",
+      "5/6 df 20/119\n",
+      "5/6 df 30/119\n",
+      "5/6 df 40/119\n",
+      "5/6 df 50/119\n",
+      "5/6 df 60/119\n",
+      "5/6 df 70/119\n",
+      "5/6 df 80/119\n",
+      "5/6 df 90/119\n",
+      "5/6 df 100/119\n",
+      "5/6 df 110/119\n"
      ]
     }
    ],
@@ -327,10 +365,188 @@
     "            col.append(description[0].text)\n",
     "        except:\n",
     "            col.append('Invalid URL')\n",
-    "        time.sleep(3 + random.random() * 10)\n",
+    "        time.sleep(2 + random.random() * 3)\n",
     "        if idx % 10 == 0:\n",
-    "            print(idx) \n",
+    "            print('{}/{} df'.format(i, len(list_of_dfs)), '{}/{}'.format(idx, len(list_of_dfs[i]))) \n",
     "    list_of_dfs[i]['DESC'] = pd.Series(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finished_dfs = list_of_dfs[:7]\n",
+    "# finished_dfs.append(df_lfp)\n",
+    "# finished_dfs.append(list_of_dfs[9][:140])\n",
+    "# finished_dfs.append(list_of_dfs[8][:68])\n",
+    "# finished_dfs.extend(list_of_dfs[:4])\n",
+    "# finished_dfs.append(list_of_dfs[5][:111])\n",
+    "# finished_dfs.extend(list_of_dfs[:3])\n",
+    "finished_dfs.extend(list_of_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SALE TYPE</th>\n",
+       "      <th>SOLD DATE</th>\n",
+       "      <th>PROPERTY TYPE</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>PRICE</th>\n",
+       "      <th>BEDS</th>\n",
+       "      <th>BATHS</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>SQUARE FEET</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HOA/MONTH</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>NEXT OPEN HOUSE START TIME</th>\n",
+       "      <th>NEXT OPEN HOUSE END TIME</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>MLS#</th>\n",
+       "      <th>FAVORITE</th>\n",
+       "      <th>INTERESTED</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>DESC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>MLS Listing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>1110 N 33rd St</td>\n",
+       "      <td>Renton</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>98056</td>\n",
+       "      <td>1099000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Lower Kennydale</td>\n",
+       "      <td>3840.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.redfin.com/WA/Renton/1110-N-33rd-St...</td>\n",
+       "      <td>NWMLS</td>\n",
+       "      <td>1214952</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>47.520846</td>\n",
+       "      <td>-122.203786</td>\n",
+       "      <td>Invalid URL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SALE TYPE  SOLD DATE              PROPERTY TYPE         ADDRESS  \\\n",
+       "222  MLS Listing        NaN  Single Family Residential  1110 N 33rd St   \n",
+       "\n",
+       "       CITY STATE    ZIP    PRICE  BEDS  BATHS         LOCATION  SQUARE FEET  \\\n",
+       "222  Renton    WA  98056  1099000     4    3.5  Lower Kennydale       3840.0   \n",
+       "\n",
+       "        ...       HOA/MONTH  STATUS  NEXT OPEN HOUSE START TIME  \\\n",
+       "222     ...             NaN  Active                         NaN   \n",
+       "\n",
+       "     NEXT OPEN HOUSE END TIME  \\\n",
+       "222                       NaN   \n",
+       "\n",
+       "                                                   URL SOURCE     MLS#  \\\n",
+       "222  http://www.redfin.com/WA/Renton/1110-N-33rd-St...  NWMLS  1214952   \n",
+       "\n",
+       "    FAVORITE INTERESTED   LATITUDE   LONGITUDE         DESC  \n",
+       "222        N          Y  47.520846 -122.203786  Invalid URL  \n",
+       "\n",
+       "[1 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finished_dfs[16][finished_dfs[16]['DESC'] == 'Invalid URL']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greater_sea_area = pd.concat(finished_dfs, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "out of 2888 houses, only 15 of them dont have a description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser = Chrome()\n",
+    "for idx, row in greater_sea_area[greater_sea_area['DESC'] == \n",
+    "                                 'Invalid URL'].iterrows():\n",
+    "    url = row['URL']\n",
+    "    try:\n",
+    "        browser.get(url)\n",
+    "        sel = \"div.sectionContent\"\n",
+    "        description = browser.find_elements_by_css_selector(sel)\n",
+    "        row['DESC'] = description[0].text\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greater_sea_area.to_csv('../data-housing/first_dataset.csv')"
    ]
   },
   {
