scraping descriptions notebook organized

--- a/notebooks/scraping-descriptions.ipynb
+++ b/notebooks/scraping-descriptions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,75 +20,6 @@
     "pd.options.display.max_columns = 25\n",
     "import time\n",
     "import random"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testing Scraper on First Row of DF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = df['URL'][0]\n",
-    "\n",
-    "browser.get(url)\n",
-    "\n",
-    "sel = \"div.sectionContent\"\n",
-    "description = browser.find_elements_by_css_selector(sel)\n",
-    "\n",
-    "description[0].text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_everett = pd.read_csv('../data-housing/everett-may-7.csv')\n",
-    "df_lynn = pd.read_csv('../data-housing/lynnwood-may-7.csv')\n",
-    "df_edm = pd.read_csv('../data-housing/edmonds-may-7.csv')\n",
-    "df_muk = pd.read_csv('../data-housing/mukilteo-may-7.csv')\n",
-    "df_mc = pd.read_csv('../data-housing/mill-creek-may-7.csv')\n",
-    "df_bothell = pd.read_csv('../data-housing/bothell-may-7.csv')\n",
-    "df_kenmore = pd.read_csv('../data-housing/kenmore-may-7.csv')\n",
-    "df_lfp = pd.read_csv('../data-housing/lake-forest-park-may-7.csv')\n",
-    "df_shoreline = pd.read_csv('../data-housing/shoreline-may-7.csv')\n",
-    "df_nsea = pd.read_csv('../data-housing/north-seattle-may-7.csv')\n",
-    "df_csea = pd.read_csv('../data-housing/central-seattle-may-7.csv')\n",
-    "df_wsea = pd.read_csv('../data-housing/west-seattle-may-7.csv')\n",
-    "df_ssea = pd.read_csv('../data-housing/south-seattle-burien-may-7.csv')\n",
-    "df_renton = pd.read_csv('../data-housing/renton-may-7.csv')\n",
-    "df_newcastle = pd.read_csv('../data-housing/newcastle-may-7.csv')\n",
-    "df_bellevue = pd.read_csv('../data-housing/bellevue-may-7.csv')\n",
-    "df_kirkland = pd.read_csv('../data-housing/kirkland-may-7.csv')\n",
-    "df_redmond = pd.read_csv('../data-housing/redmond-may-7.csv')\n",
-    "df_mt = pd.read_csv('../data-housing/mountlake-terrace-may-7.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "finished_dfs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_of_dfs = [df_wsea, df_renton, df_newcastle, \n",
-    "               df_bellevue, df_kirkland, df_redmond]"
    ]
   },
   {
@@ -149,78 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SALE TYPE</th>\n",
-       "      <th>SOLD DATE</th>\n",
-       "      <th>PROPERTY TYPE</th>\n",
-       "      <th>ADDRESS</th>\n",
-       "      <th>CITY</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>ZIP</th>\n",
-       "      <th>PRICE</th>\n",
-       "      <th>BEDS</th>\n",
-       "      <th>BATHS</th>\n",
-       "      <th>LOCATION</th>\n",
-       "      <th>SQUARE FEET</th>\n",
-       "      <th>...</th>\n",
-       "      <th>HOA/MONTH</th>\n",
-       "      <th>STATUS</th>\n",
-       "      <th>NEXT OPEN HOUSE START TIME</th>\n",
-       "      <th>NEXT OPEN HOUSE END TIME</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>SOURCE</th>\n",
-       "      <th>MLS#</th>\n",
-       "      <th>FAVORITE</th>\n",
-       "      <th>INTERESTED</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>DESC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [SALE TYPE, SOLD DATE, PROPERTY TYPE, ADDRESS, CITY, STATE, ZIP, PRICE, BEDS, BATHS, LOCATION, SQUARE FEET, LOT SIZE, YEAR BUILT, DAYS ON MARKET, $/SQUARE FEET, HOA/MONTH, STATUS, NEXT OPEN HOUSE START TIME, NEXT OPEN HOUSE END TIME, URL, SOURCE, MLS#, FAVORITE, INTERESTED, LATITUDE, LONGITUDE, DESC]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 209,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list_of_dfs[5][list_of_dfs[5]['DESC'] == 'Invalid URL']"
+    "# df_everett = pd.read_csv('../data-housing/everett-may-7.csv')\n",
+    "# df_lynn = pd.read_csv('../data-housing/lynnwood-may-7.csv')\n",
+    "# df_edm = pd.read_csv('../data-housing/edmonds-may-7.csv')\n",
+    "# df_muk = pd.read_csv('../data-housing/mukilteo-may-7.csv')\n",
+    "# df_mc = pd.read_csv('../data-housing/mill-creek-may-7.csv')\n",
+    "# df_bothell = pd.read_csv('../data-housing/bothell-may-7.csv')\n",
+    "# df_kenmore = pd.read_csv('../data-housing/kenmore-may-7.csv')\n",
+    "# df_lfp = pd.read_csv('../data-housing/lake-forest-park-may-7.csv')\n",
+    "# df_shoreline = pd.read_csv('../data-housing/shoreline-may-7.csv')\n",
+    "# df_nsea = pd.read_csv('../data-housing/north-seattle-may-7.csv')\n",
+    "# df_csea = pd.read_csv('../data-housing/central-seattle-may-7.csv')\n",
+    "# df_wsea = pd.read_csv('../data-housing/west-seattle-may-7.csv')\n",
+    "# df_ssea = pd.read_csv('../data-housing/south-seattle-burien-may-7.csv')\n",
+    "# df_renton = pd.read_csv('../data-housing/renton-may-7.csv')\n",
+    "# df_newcastle = pd.read_csv('../data-housing/newcastle-may-7.csv')\n",
+    "# df_bellevue = pd.read_csv('../data-housing/bellevue-may-7.csv')\n",
+    "# df_kirkland = pd.read_csv('../data-housing/kirkland-may-7.csv')\n",
+    "# df_redmond = pd.read_csv('../data-housing/redmond-may-7.csv')\n",
+    "# df_mt = pd.read_csv('../data-housing/mountlake-terrace-may-7.csv')"
    ]
   },
   {
@@ -372,6 +254,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding Everything to Finished"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 210,
    "metadata": {},
@@ -384,7 +273,14 @@
     "# finished_dfs.extend(list_of_dfs[:4])\n",
     "# finished_dfs.append(list_of_dfs[5][:111])\n",
     "# finished_dfs.extend(list_of_dfs[:3])\n",
-    "finished_dfs.extend(list_of_dfs)"
+    "# finished_dfs.extend(list_of_dfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check to see how many houses descriptions were not scraped"
    ]
   },
   {
@@ -518,33 +414,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "out of 2888 houses, only 15 of them dont have a description"
+    "out of 2888 houses, only 15 of them dont have a description </n>\n",
+    "Trying to correct the lines that are invalid descriptions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/housing-data.csv')\n",
+    "df.reset_index(inplace=True, drop=True)\n",
+    "df.drop(['Unnamed: 0'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "browser = Chrome()\n",
-    "for idx, row in greater_sea_area[greater_sea_area['DESC'] == \n",
-    "                                 'Invalid URL'].iterrows():\n",
+    "for idx, row in df[df['DESC'] == 'Invalid URL'].iterrows():\n",
     "    url = row['URL']\n",
     "    try:\n",
     "        browser.get(url)\n",
     "        sel = \"div.sectionContent\"\n",
     "        description = browser.find_elements_by_css_selector(sel)\n",
-    "        row['DESC'] = description[0].text\n",
+    "        df.loc[idx,'DESC'] = description[0].text\n",
     "    except:\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'greater_sea_area' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-48b73871ad8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgreater_sea_area\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data-housing/first_dataset.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'greater_sea_area' is not defined"
+     ]
+    }
+   ],
    "source": [
     "greater_sea_area.to_csv('../data-housing/first_dataset.csv')"
    ]
