just made predictions based on users, now just need to find a way to implement the tfidf matrix

--- a/notebooks/building-recommender.ipynb
+++ b/notebooks/building-recommender.ipynb
@@ -1827,7 +1827,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictions"
+   ]
   },
   {
    "cell_type": "code",
