--- a/notebooks/building-recommender.ipynb
+++ b/notebooks/building-recommender.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "df = get_data('../data/housing-data.csv', '../data/favorites_test.csv')\n",
-    "cluster = Clustering()\n",
+    "cluster = Recommending()\n",
     "tfidf = cluster.fit_transform(df.DESC.values)\n",
     "df = cluster.result(df)\n",
     "# preds = cluster.predictions(df)"
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,10 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['ID'] = df.index\n",
     "results = {}\n",
     "for idx, row in df.iterrows():\n",
     "    if idx < 2822:\n",
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +275,148 @@
     "        print('These are the houses most similar to your house')\n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommending 1 house similar to 5908 SW Douglas Place\n",
+      "----------------------------------------------------------\n",
+      "You may also like to look at: 1228 8th Ave S (score:0.48200873185)\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend(1913, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SALE TYPE</th>\n",
+       "      <th>SOLD DATE</th>\n",
+       "      <th>PROPERTY TYPE</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>PRICE</th>\n",
+       "      <th>BEDS</th>\n",
+       "      <th>BATHS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>MLS#</th>\n",
+       "      <th>FAVORITE</th>\n",
+       "      <th>INTERESTED</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>DESC</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1900</th>\n",
+       "      <td>MLS Listing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>1913 Victoria Ave SW</td>\n",
+       "      <td>Seattle</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>98126</td>\n",
+       "      <td>2150000.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.redfin.com/WA/Seattle/1913-Victoria...</td>\n",
+       "      <td>NWMLS</td>\n",
+       "      <td>1274039</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>47.586391</td>\n",
+       "      <td>-122.380639</td>\n",
+       "      <td>Timeless, classic design. Walls of windows fra...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SALE TYPE  SOLD DATE              PROPERTY TYPE               ADDRESS  \\\n",
+       "1900  MLS Listing        0.0  Single Family Residential  1913 Victoria Ave SW   \n",
+       "\n",
+       "         CITY STATE    ZIP      PRICE  BEDS  BATHS  ...   \\\n",
+       "1900  Seattle    WA  98126  2150000.0     4   3.75  ...    \n",
+       "\n",
+       "                                                    URL  SOURCE     MLS#  \\\n",
+       "1900  http://www.redfin.com/WA/Seattle/1913-Victoria...   NWMLS  1274039   \n",
+       "\n",
+       "      FAVORITE  INTERESTED   LATITUDE   LONGITUDE  \\\n",
+       "1900         N           Y  47.586391 -122.380639   \n",
+       "\n",
+       "                                                   DESC LABEL    ID  \n",
+       "1900  Timeless, classic design. Walls of windows fra...  12.0  1900  \n",
+       "\n",
+       "[1 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.index == 1900]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-6ca7b74967f0>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-6ca7b74967f0>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    URL.\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
