data for html along with how to create this data added to nb

--- a/notebooks/building-recommender.ipynb
+++ b/notebooks/building-recommender.ipynb
@@ -247,11 +247,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "filling na values that are understandable"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -940,6 +940,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'access': 0,\n",
+       " 'appliances': 1,\n",
+       " 'area': 2,\n",
+       " 'backyard': 3,\n",
+       " 'bath': 4,\n",
+       " 'beautiful': 5,\n",
+       " 'bedroom': 6,\n",
+       " 'bedrooms': 7,\n",
+       " 'bellevue': 8,\n",
+       " 'bonus': 9,\n",
+       " 'built': 10,\n",
+       " 'car': 11,\n",
+       " 'ceilings': 12,\n",
+       " 'city': 13,\n",
+       " 'close': 14,\n",
+       " 'closet': 15,\n",
+       " 'community': 16,\n",
+       " 'counters': 17,\n",
+       " 'covered': 18,\n",
+       " 'custom': 19,\n",
+       " 'deck': 20,\n",
+       " 'description': 21,\n",
+       " 'dining': 22,\n",
+       " 'downtown': 23,\n",
+       " 'easy': 24,\n",
+       " 'enjoy': 25,\n",
+       " 'entertaining': 26,\n",
+       " 'entry': 27,\n",
+       " 'family': 28,\n",
+       " 'features': 29,\n",
+       " 'fenced': 30,\n",
+       " 'fireplace': 31,\n",
+       " 'floor': 32,\n",
+       " 'floors': 33,\n",
+       " 'ft': 34,\n",
+       " 'fully': 35,\n",
+       " 'garage': 36,\n",
+       " 'gas': 37,\n",
+       " 'gorgeous': 38,\n",
+       " 'granite': 39,\n",
+       " 'great': 40,\n",
+       " 'hardwood': 41,\n",
+       " 'high': 42,\n",
+       " 'home': 43,\n",
+       " 'homes': 44,\n",
+       " 'house': 45,\n",
+       " 'huge': 46,\n",
+       " 'island': 47,\n",
+       " 'just': 48,\n",
+       " 'kitchen': 49,\n",
+       " 'lake': 50,\n",
+       " 'large': 51,\n",
+       " 'level': 52,\n",
+       " 'light': 53,\n",
+       " 'living': 54,\n",
+       " 'located': 55,\n",
+       " 'location': 56,\n",
+       " 'lot': 57,\n",
+       " 'lots': 58,\n",
+       " 'main': 59,\n",
+       " 'master': 60,\n",
+       " 'minutes': 61,\n",
+       " 'neighborhood': 62,\n",
+       " 'new': 63,\n",
+       " 'offers': 64,\n",
+       " 'office': 65,\n",
+       " 'open': 66,\n",
+       " 'opportunity': 67,\n",
+       " 'park': 68,\n",
+       " 'parking': 69,\n",
+       " 'patio': 70,\n",
+       " 'perfect': 71,\n",
+       " 'plan': 72,\n",
+       " 'private': 73,\n",
+       " 'property': 74,\n",
+       " 'quartz': 75,\n",
+       " 'rm': 76,\n",
+       " 'roof': 77,\n",
+       " 'room': 78,\n",
+       " 'schools': 79,\n",
+       " 'seattle': 80,\n",
+       " 'shopping': 81,\n",
+       " 'sound': 82,\n",
+       " 'space': 83,\n",
+       " 'spacious': 84,\n",
+       " 'sq': 85,\n",
+       " 'stainless': 86,\n",
+       " 'storage': 87,\n",
+       " 'street': 88,\n",
+       " 'suite': 89,\n",
+       " 'tile': 90,\n",
+       " 'unit': 91,\n",
+       " 'updated': 92,\n",
+       " 'upstairs': 93,\n",
+       " 'view': 94,\n",
+       " 'views': 95,\n",
+       " 'walk': 96,\n",
+       " 'water': 97,\n",
+       " 'windows': 98,\n",
+       " 'yard': 99}"
+      ]
+     },
+     "execution_count": 389,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 315,
    "metadata": {},
    "outputs": [
@@ -1477,6 +1596,35 @@
    ],
    "source": [
     "predictions.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/housing-data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['SALE TYPE', 'SOLD DATE', 'STATUS', 'NEXT OPEN HOUSE START TIME', \n",
+    "         'NEXT OPEN HOUSE END TIME', 'Unnamed: 0', 'SOURCE', 'MLS#', 'FAVORITE', \n",
+    "         'INTERESTED', 'LABEL', 'LATITUDE', 'LONGITUDE'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/data-for-html-1.csv')"
    ]
   },
   {
